# RAG-Book-Chat

./: .gitignore  README.md  app.py  create_database.py  main.py  pyproject.toml  requirements.txt  test.py
document loaders/: notes.txt  page.py  pdf.py  text.py
vector store/: DB.py
