[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "chromadb>=1.5.9",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-mistralai>=1.1.5",
    "mistralai>=2.4.13",
    "python-dotenv>=1.2.2",
]
